test/integration/ingress/manifests/basic/tls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-echo
spec:
  ingressClassName: hug
  tls:
    - hosts:
        - offload.haproxy
      secretName: ingress-tls
  rules:
    - host: offload.haproxy
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-echo
                port:
                  number: 80
