test/integration/ingress/manifests/basic/tls/secret.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGVENDQWYyZ0F3SUJBZ0lVWVhhTVN4QXAyVFVUY1FzVFBjVHFWUW1kNmpZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dqRVlNQllHQTFVRUF3d1BiMlptYkc5aFpDNW9ZWEJ5YjNoNU1CNFhEVEkxTURneU1URTFNamMxTjFvWApEVEkyTURneU1URTFNamMxTjFvd0dqRVlNQllHQTFVRUF3d1BiMlptYkc5aFpDNW9ZWEJ5YjNoNU1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXlLRHloS1BlTjh6V2pKdTFUdkhDcDA5ZzBDc1gKVWNvYzAyd0tKOVZqdW9VN0djRmRnWUx3UitRU1JJUWhrZEFYV25jdHpES25zNVVhblBEM0Y3SG5DM1krandNTgpZNFFOV0k0a0Z1Uk55R [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktrd2dnU2xBZ0VBQW9JQkFRRElvUEtFbzk0M3pOYU0KbTdWTzhjS25UMkRRS3hkUnloelRiQW9uMVdPNmhUc1p3VjJCZ3ZCSDVCSkVoQ0dSMEJkYWR5M01NcWV6bFJxYwo4UGNYc2VjTGRqNlBBdzFqaEExWWppUVc1RTNJVk5vN20ycmhjZjN0aTAyZVFTUlkxZUJQQUgxZFhoeGFkQ0R2CnFMNlhwMGZVQ3piMktROVZUZnFQVlpRcklmaGhxajFYam9Ca2dHVXdmUEthNllaTHJZUkg1d0x3enVYWktrcEkKYVAzRTdnM0FleEpUMkNrR0U0M1Uxd0o4aXkzTklZTk1BM3VxU08xSU9JM3BaZHFHVzFUZE9odnFoOEh4RWJpWQovcytTNXpvZnpMRWF1b [...]
kind: Secret
metadata:
  name: ingress-tls
type: kubernetes.io/tls


## CN offload.haproxy
